plugins {
    id 'java'
    id 'maven-publish'
}

group = 'com.maydaymemory.mae'
version = '1.0.0'

sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation('org.joml:joml:1.10.5')
    implementation("com.google.code.findbugs:jsr305:3.0.2")
    implementation("it.unimi.dsi:fastutil:8.5.15")

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java // Java 项目使用这个

            groupId = 'com.maydaymemory'    // 自定义 groupId
            artifactId = "mae"  // 自定义 artifactId
            version = '1.0.0'          // 自定义版本号
        }
    }

    repositories {
        mavenLocal() // 发布到 ~/.m2/repository
    }
}